# fractalDemo

./: .clangd  .gitmodules  CMakeLists.txt
include/: config.h  fractal.h  geometry.h  glapp.h  imguiManager.h  palette.hpp  renderer.h  rng.hpp  shader.h  stealpool.h  texture.hpp  threadpool.h  tsqueue.h  utilities.h  wsqueue.h
include/glad/: glad.h
shaders/: frag.glsl  vert.glsl
src/: glad.c  glapp.cpp  main.cpp  shader.cpp
